# exam-summer2020

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: AVLtree.hpp  AVLtree.tpp  CMakeLists.txt
src/hash/: cuckoo.hpp  linear.hpp
src/lists/: DLsircular.hpp  DLsircular.tpp  SL.hpp  SLsircular.hpp  SLsircular.tpp
src/sortings/: BucketSort.h  Change.hpp  CountSort.h  CountingSort.h  RadixSort.hpp  Sort.hpp  Type.hpp
src/trees/: AVLTree.hpp  AVLTree.tpp  AVLtree.hpp  AVLtree.tpp  BTree.hpp  BTree.tpp  BplusTree.hpp  BplusTree.tpp  RBTree.hpp  RBTree.tpp  splay_map.hpp  splay_set.hpp
src/types/: Adress.hpp  Official.cpp  Official.hpp
test/: CMakeLists.txt  avl_test.cpp  b_test.cpp  dlsirc_test.cpp  doctest.h  hash_test.cpp  radix_test.cpp  sl_test.cpp  slsirc_test.cpp  sort_test.cpp  splay_test.cpp
ui/: CMakeLists.txt  Change.hpp  Manager.cpp  Manager.hpp  main.cpp
ui/Meta/: Map.hpp  Overload.hpp
ui/Sort/: Change.hpp  Sort.hpp  Type.hpp
